Refactor code to utilise jextract for file parsing
The commits include implementing Panama parsing to use jextract functionality, which aids in the processing of header files. More specifically, parseFile method now accepts parserTechnology parameter to choose between old JNA and the new Panama parsers. Aside from this, add preview options to java compile and test tasks.