@@ -14,7 +14,7 @@ tasks.test {
 		showStandardStreams = true
 	}
 
-	exclude("klang/parser/libclang/**")
+	//exclude("klang/parser/libclang/**")
 }
 
 dependencies {
@@ -24,8 +24,21 @@ dependencies {
 	implementation("io.github.microutils:kotlin-logging:1.7.4")
 	implementation("org.slf4j:slf4j-simple:1.7.26")
 	api(project(":libclang"))
+	api(project(":jextract"))
 	implementation(libs.arrow.core)
 	implementation(libs.arrow.fx.coroutines)
 	api(libs.kotlinpoet)
 	testImplementation(libs.kotest)
+}
+
+tasks.withType<JavaCompile>().configureEach {
+	options.compilerArgs.add("--enable-preview")
+}
+
+tasks.withType<Test>().configureEach {
+	jvmArgs(
+		"--enable-preview",
+		"--enable-native-access=ALL-UNNAMED"
+	)
+	systemProperties("java.library.path" to "/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib")
 }
